--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,22 @@
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@/*": ["./root/*"]
-    }
-  }
+      "@/*": [
+        "./root/*"
+      ]
+    },
+    "types": [
+      "nativewind/types"
+    ],
+    "strict": true,
+    "baseUrl": ".",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
+  "include": [
+    "root/**/*",
+    "App.tsx",
+    "root/types/*.d.ts",
+    "nativewind-env.d.ts"
+  ]
 }
