--- a/package.json
+++ b/package.json
@@ -1,39 +1,64 @@
 {
   "name": "celestial_gates",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
+  "description": "A mythological journey through ancient deities and legends",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf node_modules && yarn cache clean && yarn install",
+    "clean:android": "cd android && ./gradlew clean",
+    "clean:ios": "cd ios && xcodebuild clean",
+    "pod:install": "cd ios && bundle exec pod install",
+    "pod:update": "cd ios && bundle exec pod update",
+    "build:android": "cd android && ./gradlew assembleRelease",
+    "build:ios": "cd ios && xcodebuild -workspace celestial_gates.xcworkspace -scheme celestial_gates -configuration Release",
+    "type-check": "tsc --noEmit",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/runtime": "^7.24.0",
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
+    "@commitlint/cz-commitlint": "^19.0.3",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
-    "@react-navigation/native": "^7.0.14",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nativewind": "^4.1.23",
+    "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-native": "^0.77.0",
+    "react-native-animated-linear-gradient": "^1.3.0",
     "react-native-bouncy-checkbox": "^4.1.2",
-    "react-native-gesture-handler": "^2.22.1",
+    "react-native-gesture-handler": "^2.23.1",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv-storage": "^0.11.2",
     "react-native-progress": "^5.0.1",
-    "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-screens": "^4.6.0",
     "react-native-snackbar": "^2.8.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.1",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-uuid": "^2.0.3",
     "react-native-video": "^6.10.0",
@@ -63,6 +88,42 @@
     "typescript": "5.0.4"
   },
   "engines": {
-    "node": ">=18"
-  }
+    "node": ">=18",
+    "yarn": ">=1.22.0"
+  },
+  "packageManager": "yarn@4.0.2",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "keywords": [
+    "react-native",
+    "mythology",
+    "quiz",
+    "gods",
+    "legends",
+    "mobile-game"
+  ]
 }
