--- a/package.json
+++ b/package.json
@@ -8,18 +8,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "clean": "rm -rf node_modules && yarn cache clean && yarn install",
-    "clean:android": "cd android && ./gradlew clean",
-    "clean:ios": "cd ios && xcodebuild clean",
-    "pod:install": "cd ios && bundle exec pod install",
-    "pod:update": "cd ios && bundle exec pod update",
-    "build:android": "cd android && ./gradlew assembleRelease",
-    "build:ios": "cd ios && xcodebuild -workspace celestial_gates.xcworkspace -scheme celestial_gates -configuration Release",
-    "type-check": "tsc --noEmit",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "prepare": "husky"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.24.0",
